--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,46 +12,38 @@
     <p>Thank you for playing our game(s)! This Privacy Policy applies to all games developed and published by <strong>IUV GameDev</strong> (“we,” “our,” or “us”) and outlines how we handle your privacy when you play our games.</p>
 
     <h2>1. Information Collection</h2>
-    <p>We do not collect any personal information directly from users. However, we use third-party services such as <strong>Google AdMob</strong> to show advertisements, which may collect data automatically for ad targeting and analytics purposes.</p>
-    <p>Information collected by these services may include:</p>
+    <p>We do not collect any personal information directly from users. However, we use third-party services such as <strong>Google AdMob</strong> to show advertisements. These services may collect certain device information required for delivering ads, such as:</p>
     <ul>
-        <li>Device identifiers (e.g., Android Advertising ID)</li>
-        <li>IP address</li>
-        <li>App usage data</li>
-        <li>General location (approximate)</li>
+        <li>Android Advertising ID</li>
     </ul>
 
     <h2>2. Advertising</h2>
     <p>We use <strong>Google AdMob</strong> to display ads within our apps. These ads may be personalized based on your interests and device data. Google may use cookies or similar technologies to collect and process this data to provide relevant ads to you.</p>
     <p>Data collected through AdMob is handled in accordance with <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a>.</p>
 
-    <h2>3. User Consent & Opting Out</h2>
-    <p>If you are located in the European Economic Area (EEA) or California, you may be presented with a consent form when you first launch the game. You can manage your ad preferences anytime by using your device settings or through the following tools:</p>
+    <h2>3. Opting Out</h2>
+    <p>Since we show personalized ads, users may manage their preferences or opt out through their device settings or by visiting the following links:</p>
     <ul>
-        <li><a href="https://adssettings.google.com" target="_blank">Google Ads Settings</a></li>
-        <li><a href="https://www.youronlinechoices.com" target="_blank">Your Online Choices (EU)</a></li>
-        <li><a href="https://www.networkadvertising.org/choices" target="_blank">Network Advertising Initiative (US)</a></li>
+        <li><a href="https://www.google.com/policies/technologies/ads/" target="_blank">Google Ads Technology</a></li>
+        <li><a href="https://www.google.com/settings/ads" target="_blank">Google Ads Settings</a></li>
+        <li><a href="https://www.google.com/policies/privacy/partners/" target="_blank">Google Privacy & Partners</a></li>
         <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
     </ul>
 
     <h2>4. Permissions</h2>
     <p>Our games may require internet access to load advertisements and enable online features. We do not request or use any unnecessary device permissions beyond what is required for gameplay and ads.</p>
 
-    <h2>5. In-App Purchases</h2>
-    <p>Some of our games may include in-app purchases. These are handled securely by Google Play, and we do not store or access your payment information.</p>
-
-    <h2>6. Children’s Privacy</h2>
+    <h2>5. Children’s Privacy</h2>
     <p>Our games are not directed at children under the age of 13. We do not knowingly collect personal information from children. If we discover that a child under 13 has provided personal data, we will take steps to delete it. If you are a parent or guardian and believe your child has provided us with personal information, please contact us at <strong>iuv.gamedev@gmail.com</strong>.</p>
 
-    <h2>7. Security</h2>
+    <h2>6. Security</h2>
     <p>We take reasonable steps to protect the integrity and security of our apps and the third-party services we use. However, please be aware that no method of transmission over the internet is 100% secure.</p>
 
-    <h2>8. Changes to This Privacy Policy</h2>
+    <h2>7. Changes to This Privacy Policy</h2>
     <p>We may update this Privacy Policy from time to time. Any changes will be reflected on this page with an updated revision date. Please review this page regularly for updates.</p>
 
-    <h2>9. Contact Us</h2>
+    <h2>8. Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, feel free to reach out to us at:</p>
     <p><strong>Email:</strong> iuv.gamedev@gmail.com</p>
 </body>
 </html>
-
