--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -31,7 +31,7 @@
     </ul>
 
     <h2>4. Permissions</h2>
-    <p>Our games may require internet access to load advertisements and enable online features. We do not request or use any unnecessary device permissions beyond what is required for gameplay and ads.</p>
+    <p>Our games may require internet access solely for displaying advertisements. We do not request or use any unnecessary device permissions beyond what is required for showing ads.</p>
 
     <h2>5. Children’s Privacy</h2>
     <p>Our games are not directed at children under the age of 13. We do not knowingly collect personal information from children. If we discover that a child under 13 has provided personal data, we will take steps to delete it. If you are a parent or guardian and believe your child has provided us with personal information, please contact us at <strong>iuv.gamedev@gmail.com</strong>.</p>
