--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,27 +12,30 @@
     <p>Thank you for playing our game(s)! This Privacy Policy applies to all games developed and published by <strong>IUV GameDev</strong> (“we,” “our,” or “us”) and outlines how we handle your privacy when you play our games.</p>
 
     <h2>1. Information Collection</h2>
-    <p>We do not collect any personal information directly from users. However, we use third-party services such as <strong>Google AdMob</strong> to show advertisements, which may collect certain data automatically for ad targeting and analytics.</p>
-    <p>Information collected by these services may include:</p>
-    <ul>
-        <li>Device identifiers (e.g., Android Advertising ID)</li>
-    </ul>
+    <p>We do not collect any personal information directly from users. However, we use third-party services such as <strong>Google AdMob</strong> to show advertisements. These services may collect limited device information such as your <strong>Android Advertising ID</strong> for ad delivery and analytics.</p>
 
     <h2>2. Advertising</h2>
-    <p>We use <strong>Google AdMob</strong> to display ads within our apps. These ads may be personalized based on your interests and device data. Google may use cookies or similar technologies to collect and process this data to provide relevant ads to you.</p>
+    <p>We use <strong>Google AdMob</strong> to display ads within our apps. These ads may be personalized based on your device data. Google may use cookies or similar technologies to collect and process this data to provide relevant ads.</p>
     <p>Data collected through AdMob is handled in accordance with <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a>.</p>
 
-    <h2>3. Opting Out</h2>
-    <p>Since we do not collect personal data ourselves, no opt-out is necessary. For more information about how Google handles your data and how to control ad personalization, you may visit the following links:</p>
+    <h2>3. User Consent & Opting Out</h2>
+    <p>If you are located in the European Economic Area (EEA) or California, you may be presented with a consent form when you first launch the game. You can manage your ad preferences through your device settings or the following tools:</p>
     <ul>
-        <li><a href="https://www.google.com/policies/technologies/ads/" target="_blank">Google Ads Technology</a></li>
         <li><a href="https://www.google.com/settings/ads" target="_blank">Google Ads Settings</a></li>
+        <li><a href="https://www.youronlinechoices.com" target="_blank">Your Online Choices (EU)</a></li>
+        <li><a href="https://www.networkadvertising.org/choices" target="_blank">Network Advertising Initiative (US)</a></li>
+        <li><a href="https://www.google.com/policies/technologies/ads/" target="_blank">Google Ads Technology</a></li>
         <li><a href="https://www.google.com/policies/privacy/partners/" target="_blank">Google Privacy & Partners</a></li>
         <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
     </ul>
 
     <h2>4. Permissions</h2>
-    <p>Our games may request internet access to display ads and ask for notification permission to send occasional game-related updates. We do not request or use any other device permissions beyond what is necessary for ads and notifications.</p>
+    <p>Our games may request the following permissions:</p>
+    <ul>
+        <li><strong>Internet Access:</strong> Required to load advertisements.</li>
+        <li><strong>Post Notifications:</strong> Used to send occasional reminders about the game. No personal data is collected or stored through this permission.</li>
+    </ul>
+    <p>We do not request or use any other device permissions beyond what is required for gameplay and basic functionality.</p>
 
     <h2>5. Children’s Privacy</h2>
     <p>Our games are not directed at children under the age of 13. We do not knowingly collect personal information from children. If we discover that a child under 13 has provided personal data, we will take steps to delete it. If you are a parent or guardian and believe your child has provided us with personal information, please contact us at <strong>iuv.gamedev@gmail.com</strong>.</p>
