--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,11 +19,9 @@
     <p>Data collected through AdMob is handled in accordance with <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a>.</p>
 
     <h2>3. User Consent & Opting Out</h2>
-    <p>If you are located in the European Economic Area (EEA) or California, you may be presented with a consent form when you first launch the game. You can manage your ad preferences through your device settings or the following tools:</p>
+    <p>Since we do not collect personal data ourselves, no opt-out is necessary. For more information about how Google handles your data and how to control ad personalization, you may visit the following links:</p>
     <ul>
         <li><a href="https://www.google.com/settings/ads" target="_blank">Google Ads Settings</a></li>
-        <li><a href="https://www.youronlinechoices.com" target="_blank">Your Online Choices (EU)</a></li>
-        <li><a href="https://www.networkadvertising.org/choices" target="_blank">Network Advertising Initiative (US)</a></li>
         <li><a href="https://www.google.com/policies/technologies/ads/" target="_blank">Google Ads Technology</a></li>
         <li><a href="https://www.google.com/policies/privacy/partners/" target="_blank">Google Privacy & Partners</a></li>
         <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
